# ripsy

./: Cargo.toml  README.md
.github/actions/: ci.yml
examples/client/: Cargo.toml
examples/client/src/: main.rs
examples/server/: Cargo.toml
examples/server/src/: main.rs
examples/shared/: Cargo.toml
examples/shared/src/: lib.rs
macros/: Cargo.toml
macros/src/: endpoint.rs  lib.rs  macros.rs  ripsy.rs
src/: axum_bincode.rs  client.rs  lib.rs  macro_helpers.rs
