[package]
name = "ripsy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", optional = true }
macros = { path = "./macros" }
bincode = "1.3.3"
serde = "1.0.188"
reqwest = { version = "0.11.18", optional = true }

[features]
client = ["dep:reqwest", "macros/client"]
server = ["dep:axum", "macros/server"]

[workspace]
members = ["macros", "examples/client", "examples/server"]
default-members = ["macros"]
