[package]
name = "ripsy"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Hamza <me@mhamza.dev>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/ripsy"
description = "RPC between Server/Client written in Rust"
repository = "https://github.com/hamza1311/ripsy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", optional = true }
ripsy-macros = { version = "0.1.0", path = "./macros" }
bincode = "1.3.3"
serde = "1.0.188"
reqwest = { version = "0.11.18", optional = true }

[features]
client = ["dep:reqwest", "ripsy-macros/client"]
server = ["dep:axum", "ripsy-macros/server"]

[workspace]
members = ["macros", "examples/client", "examples/server"]
default-members = ["macros"]
