[package]
name = "ripsy-macros"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Hamza <me@mhamza.dev>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
documentation = "https://docs.rs/ripsy"
description = "proc-macros for ripsy"
repository = "https://github.com/hamza1311/ripsy"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = { version = "2.0.31", features = ["full"] }

[features]
client = []
server = []