[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20" }
tokio = { version = "1.32.0", features = ["full"] }
ripsy = { path = "../../", features = ["server"] }
shared = { path = "../shared" }